--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest Countries</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <h1>I Started React Today!!!</h1>
+    <div id="countries" class="container"></div>
+    <!-- link custom js -->
+    <script src="js/countries.js"></script>
 </body>
 
 </html>
